# mhtopt

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pypi-publish.yml  python-test.yml  r-cmd-check.yml
python/: LICENSE  README.md  pyproject.toml
python/examples/: mht_example.py  mht_example_log.txt
python/src/mhtopt/: __init__.py  cost_estimate.py  critical.py  est.py  table.py  test.py
python/testing/: test_mht_testdrive.py  testdrive_log.txt
python/tests/: test_cost_estimate.py  test_critical.py  test_est.py  test_table.py  test_test.py
r/: README.md
r/docs/: documentation_R.md
r/examples/: mht_example.R  mht_example_log.txt
r/mhtopt/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cran-comments.md
r/mhtopt/R/: mht_cost_estimate.R  mht_critical.R  mht_est.R  mht_table.R  mht_test.R
r/mhtopt/inst/: CITATION  WORDLIST
r/mhtopt/man/: mht_cost_estimate.Rd  mht_critical.Rd  mht_est.Rd  mht_table.Rd  mht_test.Rd
r/mhtopt/tests/: testthat.R
r/mhtopt/tests/testthat/: test-mht_cost_estimate.R  test-mht_critical.R  test-mht_est.R  test-mht_table.R  test-mht_test.R
r/mhtopt/vignettes/: mhtopt.Rmd  references.bib
r/testing/: test_mht_testdrive.R  testdrive_log.txt
stata/: CLEAN_INSTALL_CHECK.do  README.md  _clean_log.do  mht_cost_estimate.ado  mht_cost_estimate.sthlp  mht_critical.ado  mht_critical.sthlp  mht_est.ado  mht_est.sthlp  mht_table.ado  mht_table.sthlp  mht_test.ado  mht_test.sthlp
stata/docs/: documentation_stata.md
stata/examples/: mht_example.do  mht_example_log.txt
stata/test/: run_tests.do  test_all.do  test_log.txt
stata/testing/: test_mht_stata_testdrive.do  testdrive_log.txt
stata/testing/full_analysis_case/: analysis_part1_outcomes.do  analysis_part4_gradient.do  part1_outcomes_log.txt  part2_treatments_log.txt  results_note.md  run_all.do
testing/: README.md
testing/data/: .gitkeep
testing/full_analysis_case/: analysis_part1_outcomes.do  analysis_part2_treatments.do  analysis_part3_calibration.do  analysis_part4_gradient.do  part3_calibration_log.txt  part4_gradient_log.txt  run_all.do  run_all_log.txt
