[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhtopt"
version = "0.1.0"
description = "Optimal Multiple Hypothesis Testing Corrections (Viviano, Wuthrich, and Niehaus 2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Davide Viviano"},
    {name = "Kaspar Wuthrich"},
    {name = "Paul Niehaus"},
    {name = "Erick Rosas Lopez", email = "erosasl@ucsd.edu"},
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pandas>=1.3"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
