[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhtopt"
version = "0.1.0"
description = "Optimal Multiple Hypothesis Testing Corrections (Viviano, Wuthrich, and Niehaus 2026)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Davide Viviano"},
    {name = "Kaspar Wuthrich"},
    {name = "Paul Niehaus"},
    {name = "Erick Rosas Lopez", email = "erosasl@ucsd.edu"},
]
keywords = ["statistics", "hypothesis-testing", "multiple-comparisons", "econometrics", "experiment-design"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pandas>=1.3"]

[project.urls]
Homepage      = "https://github.com/OWNER/mhtopt"
Source        = "https://github.com/OWNER/mhtopt"
Issues        = "https://github.com/OWNER/mhtopt/issues"
Documentation = "https://github.com/OWNER/mhtopt#readme"
Changelog     = "https://github.com/OWNER/mhtopt/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
